--- a/OpenScanNIDAQ.vcxproj.filters
+++ b/OpenScanNIDAQ.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="Clock.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ParkUnpark.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
