Remove unused variables in build scripts

--- a/DumpWaveform/meson.build
+++ b/DumpWaveform/meson.build
@@ -3,7 +3,7 @@ dumpwaveform_src = [
     '../Waveform.c',
 ]
 
-dumpwaveform_exe = executable(
+executable(
     'DumpWaveform',
     dumpwaveform_src,
     c_args: [
